--- a/appUno/templates/appUno/tecnicos.html
+++ b/appUno/templates/appUno/tecnicos.html
@@ -22,7 +22,7 @@
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'index' %}">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Info</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contacto</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
@@ -34,7 +34,7 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">BIENVENIDO AL BLOG </h1>
+                    <h1 class="fw-bolder">EL CUERPO TECNICO </h1>
                     <h1 class="fw-bolder">DE LA SCALONETA! </h1>
                     <p class="lead mb-0">Las mejores estadisticas de Qatar 2022</p>
                 </div>
@@ -47,7 +47,7 @@
                 <div class="col-lg-8">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://media.ambito.com/p/115d8026d9449eb0604eda2b3913d7ba/adjuntos/239/imagenes/040/370/0040370089/argentina-campeon-del-mundo-2022-2022-4jpg.jpg" alt="..." /></a>
+                        <a href="#!"><img class="card-img-top" src="https://agenciafe.com/data/img_cont/img_imagenes/172264.png" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">Diciembre 19, 2022</div>
                             <h2 class="card-title">ARGENTINA CAMPEON MUNDIAL!</h2>
@@ -65,7 +65,7 @@
                                     <div class="small text-muted">Diciembre 19, 2022</div>
                                     <h2 class="card-title h4">Jugadores</h2>
                                     <p class="card-text"> Vas a ver las mejores estadisticas de los jugadores en este mundial de qatar 2022.</p>
-                                    <a class="btn btn-primary" href="{% url 'jugadores' %}"> Estadisticas →</a>
+                                    <a class="btn btn-primary" href="#!"> Estadisticas →</a>
                                 </div>
                             </div>
                             <!-- Blog post-->
@@ -75,7 +75,7 @@
                                     <div class="small text-muted">Diciembre 19, 2022</div>
                                     <h2 class="card-title h4">Goles</h2>
                                     <p class="card-text">Vas a ver las mejores estadisticas de los goles en este mundial de qatar 2022.</p>
-                                    <a class="btn btn-primary" href="{% url 'goles' %}">Estadisticas →</a>
+                                    <a class="btn btn-primary" href="#!">Estadisticas →</a>
                                 </div>
                             </div>
                         </div>
@@ -87,7 +87,7 @@
                                     <div class="small text-muted">Diciembre 19, 2022</div>
                                     <h2 class="card-title h4">Partidos</h2>
                                     <p class="card-text">Vas a ver las mejores estadisticas de los partidos en este mundial de qatar 2022.</p>
-                                    <a class="btn btn-primary" href="{% url 'partidos' %}">Estadisticas →</a>
+                                    <a class="btn btn-primary" href="#!">Estadisticas →</a>
                                 </div>
                             </div>
                             <!-- Blog post-->
@@ -97,7 +97,7 @@
                                     <div class="small text-muted">Diciembre 19, 2022</div>
                                     <h2 class="card-title h4">Cuerpo tecnico</h2>
                                     <p class="card-text">Vas a ver al detalle, a los integrantes.</p>
-                                    <a class="btn btn-primary" href="{% url 'tecnicos' %}">Leer más →</a>
+                                    <a class="btn btn-primary" href="#!">Leer más →</a>
                                 </div>
                             </div>
                         </div>
