--- a/appUno/templates/appUno/padre.html
+++ b/appUno/templates/appUno/padre.html
@@ -114,6 +114,22 @@
                             </div>
                         </div>
                     </div>
+                    <!-- AGREGAR INFO A BD-->
+                    <div class="card mb-4">
+                        <div class="card-header">FORMULARIO</div>
+                        <div class="card-body">
+                            <div class="input-group">
+
+                                {% block fomulario %}
+                                {% endblock %}   
+
+                                {% block mensaje_guardado %}
+                                {% endblock %}    
+                                
+
+                            </div>
+                        </div>
+                    </div>
                   
         <!-- Footer-->
         <footer class="py-5 bg-dark">
