--- a/appUno/templates/appUno/goles.html
+++ b/appUno/templates/appUno/goles.html
@@ -41,3 +41,18 @@ Convirtio 7 goles en este mundial de Qatar 2022.
 <p class="card-text"> Atajo 2 penales en la final, convirtiendose en heroe.</p>
 {% endblock %}
 
+{% block fomulario %}
+<form action="{% url 'goles' %}" method="POST"> {% csrf_token %}
+
+    <P>Nombre del jugador: <input type="text" name="nombre"> </P>   
+    <P>Cantidad de goles: <input type="text" name="goles"> </P>  
+      
+
+    <input type="submit" value="Guardar">
+    
+</form>
+{% endblock %}
+
+{% block mensaje_guardado %}
+<h1> {{ mensaje }} </h1>
+{% endblock %}    
