--- a/appUno/templates/appUno/jugadores.html
+++ b/appUno/templates/appUno/jugadores.html
@@ -40,3 +40,7 @@ Convirtio 7 goles en este mundial de Qatar 2022.
 {% block descripcion_foto_chica2 %}
 <p class="card-text"> Atajo 2 penales en la final, convirtiendose en heroe.</p>
 {% endblock %}
+
+{% block mensaje_guardado %}
+<h1> {{ mensaje }} </h1>
+{% endblock %}    
